<resources>
    <string name="app_name">HAPP+</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    //misc
    <string name="misc_plugins">Plugins</string>
    <string name="misc_placeholder">Placeholder String+</string>
    <string name="misc_default">Default</string>
    <string name="misc_item_mark">*</string>
    <string name="misc_error">error</string>
    <string name="misc_empty_string">-</string>
    <string name="misc_missing_value">\???</string>
    <string name="misc_save">save</string>
    <string name="misc_reject">reject</string>

    //Main Activity
    <string name="activity_main_fragment_now">Now</string>
    <string name="activity_main_fragment_devices">Devices</string>
    <string name="activity_main_fragment_activities">Activities</string>

    //Menus
    <string name="menu_back">back</string>

    //Shared plugin strings
    <string name="plugin_not_enabled">"Plugin is not enabled."</string>
    <string name="plugin_receiver_isnull">Broadcast Receiver is not registered</string>
    <string name="plugin_not_loaded">is not loaded.</string>
    <string name="plugin_not_found">is required &amp; cannot be found</string>
    <string name="plugin_has_errors">is required &amp; has errors</string>
    <string name="plugin_settings">Plugin settings</string>

    //Prefs
    <string name="pref_enabled_desc">Is this plugin enabled</string>
    <string name="pref_compare_profile">Compare to this profile</string>
    <string name="pref_compare_profile_short">Compare to</string>
    <string name="pref">Pref</string>
    <string name="pref_missing">is missing</string>
    <string name="pref_not_set">not set</string>
    <string name="pref_inherited">inherited</string>
    <string name="pref_open_profile_editor">Open Profile Editor</string>

    //Device
    <string name="device_status_error">Error</string>
    <string name="device_status_warn">Warning</string>
    <string name="device_status_ok">Ready</string>
    <string name="device_status_title">status</string>
    <string name="device_action">device action</string>

    //Device Strings
    <string name="last_reading">last reading</string>
    <string name="age">age</string>
    <string name="device_icon">Device Icon</string>
    <string name="device_first_action">Device First Action</string>
    <string name="device_second_action">Device Second Action</string>
    <string name="device_third_action">Device Third Action</string>

    //Device CGM
    <string name="device_cgm_bg_delta">delta</string>
    <string name="device_cgm_units">Blood Glucose Units</string>
    <string name="device_cgm_units_desc">Blood Glucose displayed in the following format</string>
    <string name="device_cgm_bg_mgdl">mgdl</string>
    <string name="device_cgm_bg_mmol">mmol/l</string>
    <string name="device_cgm_data_source">CGM Data Source</string>
    <string name="device_cgm_data_source_desc">Use Blood Glucose readings from the following CGM Source Plugin</string>
    <string name="device_cgm_desc">HAPP CGM Device</string>
    <string name="device_cgm_name">CGM</string>

    //Device Sys Profile
    <string name="device_profile_desc">HAPP Sys Profile Manager Device</string>
    <string name="device_profile_name">Profile</string>
    <string name="device_profile">Profile</string>
    <string name="device_profile_loaded">Profile Loaded</string>
    <string name="device_profile_loaded_name">Profile Name</string>
    <string name="device_profile_name_not_allowed">Profile name is not allowed, please change</string>
    <string name="device_profile_new">New Profile</string>
    <string name="device_profile_copy">Copy</string>
    <string name="device_profile_sys_prefs_source">App Preferences</string>
    <string name="device_profile_sys_prefs_source_desc">HAPP+ Application Preferences</string>
    <string name="device_profile_patient_prefs_source">Patient Preferences</string>
    <string name="device_profile_patient_prefs_source_desc">Patient Preferences</string>

    //Device Sys Functions
    <string name="device_sysf_bw_plugin">Bolus Wizard Plugin</string>
    <string name="device_sysf_iob_plugin">IOB Plugin</string>
    <string name="device_sysf_iob_plugin_desc">Plugin used for Insulin On Board Calculations</string>
    <string name="device_sysf_cob_plugin">COB Plugin</string>
    <string name="device_sysf_cob_plugin_desc">Plugin used for Carbohydrate On Board Calculations</string>
    <string name="device_sysf_bw_plugin_desc">Plugin used for Bolus Wizard Calculations</string>
    <string name="device_sysf_name">System Functions</string>
    <string name="device_sysf_desc">Core System Functions used by HAPP</string>
    <string name="device_sysf_service_stats_err">Stats Service is not scheduled to run</string>

    //Device Pump
    <string name="device_pump_name">Pump</string>
    <string name="device_pump_desc">HAPP Pump Device</string>
    <string name="device_pump_pref_pump">Pump</string>
    <string name="device_pump_pref_pump_desc">Pump plugin in use</string>
    <string name="device_pump_plugin">Pump Plugin</string>
    <string name="device_pump_user_rejected_bolus">Bolus rejected by User</string>
    <string name="device_pump_new_bolus_receiver_err">New Bolus to Action Receiver not registered</string>
    <string name="device_pump_plugin_pref_basal_profile">Basal Profile</string>
    <string name="device_pump_plugin_pref_basal_profile_desc">24h Pump Background Basal Profile</string>

    //PatientPrefs
    <string name="plugin_PatientPrefs_pref_dia">DIA</string>
    <string name="plugin_PatientPrefs_pref_dia_desc">Duration of Insulin Action (Hours)</string>
    <string name="plugin_PatientPrefs_pref_high_sgv">High SGV</string>
    <string name="plugin_PatientPrefs_pref_high_sgv_desc">High Sugar Glucose Value</string>
    <string name="plugin_PatientPrefs_pref_target_sgv">Target SGV</string>
    <string name="plugin_PatientPrefs_pref_target_sgv_desc">Target Sugar Glucose Value</string>
    <string name="plugin_PatientPrefs_pref_low_sgv">Low SGV</string>
    <string name="plugin_PatientPrefs_pref_low_sgv_desc">Low Sugar Glucose Value</string>
    <string name="plugin_PatientPrefs_pref_carb_absorption_rate">Carb Absorption Rate</string>
    <string name="plugin_PatientPrefs_pref_carb_absorption_rate_desc">Amount of Carbs digested per hour (grams)</string>
    <string name="plugin_PatientPrefs_pref_isf">Insulin Sensitivity Factor</string>
    <string name="plugin_PatientPrefs_pref_isf_desc">How much would 1U of Insulin lower your Blood Glucose</string>
    <string name="plugin_PatientPrefs_pref_carb_ratio">Carbohydrate Ratio</string>
    <string name="plugin_PatientPrefs_pref_carb_ratio_desc">How much Carbs are covered by 1U of Insulin</string>

    //Plugin HAPPBolusWizard
    <string name="plugin_HAPPBolusWizard_name">HAPP Bolus Wizard</string>
    <string name="plugin_HAPPBolusWizard_desc">Bolus Wizard based on original HAPP Code</string>
    <string name="plugin_HAPPBolusWizard_critical_low_no_bolus">Critical Low, no Bolus allowed</string>
    <string name="plugin_HAPPBolusWizard_carbBolus">Carb Bolus</string>
    <string name="plugin_HAPPBolusWizard_sgvCorrection">SGV Corr</string>
    <string name="plugin_HAPPBolusWizard_iobCorrection">IOB Corr</string>
    <string name="plugin_HAPPBolusWizard_enter_carb">Enter Carb Value</string>
    <string name="plugin_HAPPBolusWizard_bolus">Bolus</string>
    <string name="plugin_HAPPBolusWizard_correction">Correction</string>
    <string name="plugin_HAPPBolusWizard_show_calc">Show Calc</string>

    //HAPP Validator
    <string name="validator_happ_name">HAPP Event Validator</string>
    <string name="validator_happ_desc">HAPP default Event validator plugin. All Events must pass this validator checks.</string>

    //Event Strings
    <string name="event_bolus_wizard">Bolus Wizard</string>
    <string name="event_pump_events">Pump Events</string>
    <string name="event_to_save">Save</string>
    <string name="event_reject">Reject</string>
    <string name="event_warning">Warn</string>
    <string name="event_to_action">Action</string>
    <string name="event_new">New Events</string>
    <string name="event_recent">Recent</string>
    <string name="event_today">Today</string>
    <string name="event_rejected">Event Rejected</string>
    <string name="events_rejected">Events Rejected</string>
    <string name="event_icon">Event Icon</string>
    <string name="event_primary_action">Event Primary Action</string>
    <string name="event_menu">Event Menu</string>
    <string name="event_event">Event</string>


    //Event Bolus
    <string name="event_bolus_type_bolus">Bolus</string>
    <string name="event_bolus_type_bolus_corr">Correction Bolus</string>
    <string name="event_bolus_type_bolus_with_corr">Bolus With Correction</string>
    <string name="event_bolus_type_unknown">Unknown Bolus Type</string>

    //Event Food
    <string name="event_food">Food</string>
    <string name="event_food_size_small">Small Meal</string>
    <string name="event_food_size_large">Large Meal</string>
    <string name="event_food_size_avg">Medium Meal</string>
    <string name="event_food_carbs_fast">High GI</string>
    <string name="event_food_carbs_slow">Low GI</string>
    <string name="event_food_carbs_avg">Avg GI</string>

    //SGV Event
    <string name="event_sgv">SGV</string>

    //Stat Event
    <string name="event_stat">Stat</string>

    //Temp Basal Event
    <string name="event_temp_basal">Temp Basal</string>

    //Time Strings
    <string name="time_just_now">just now</string>
    <string name="time_min_ago">min ago</string>
    <string name="time_mins_ago">mins ago</string>
    <string name="time_hour_ago">hour ago</string>
    <string name="time_hours_ago">hours ago</string>
    <string name="time_min">min</string>
    <string name="time_mins">mins</string>
    <string name="time_hour">hour</string>
    <string name="time_hours">hours</string>

    //Dialogs
    <string name="dialog_copy_to_clipboard">Copy To Clipboard</string>

    //Fragment Missing
    <string name="fragment_missing_cannot_find">cannot be found. Check that the plugin is Enabled.</string>

    //Profile Editor 24H
    <string name="profile_editor_profile_save_error">Gaps between time slots, fix before saving</string>
    <string name="profile_editor_unsaved_profile">Profile changes have not been saved</string>
    <string name="profile_editor_timeslot_no_room">Cannot add additional 30mins between this and next time slot</string>
    <string name="profile_editor_saved">Profile Updated</string>
    <string name="profile_editor_default_time_slots">Default Time Slots</string>
    <string name="profile_editor_time_slot_30min">30mins</string>
    <string name="profile_editor_time_slot_60min">60mins</string>

</resources>
