<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        style="@style/ListIconMainIcon"
        android:id="@+id/eventMainIcon"
        android:contentDescription="@string/event_icon"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                style="@style/ListItemPrimaryTextDark"
                android:text="@string/misc_placeholder"
                android:id="@+id/eventTitle"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/ListItemSecondaryTextDark"
                android:text="@string/misc_empty_string"
                android:id="@+id/eventTime"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/ListItemSecondaryTextDark"
            android:text="@string/misc_placeholder"
            android:id="@+id/eventSubText"/>

    </LinearLayout>

    <ImageButton
        style="@style/ListIconMainIcon"
        android:id="@+id/eventActionPrimary"
        android:contentDescription="@string/event_primary_action"/>

    <ImageButton
        style="@style/ListIconMainIcon"
        android:id="@+id/eventMenu"
        android:contentDescription="@string/event_menu"/>
</LinearLayout>