<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    style="@style/CardActions"
    android:id="@+id/deviceCardActions"
    android:layout_alignParentBottom="true">

    <ImageButton
        style="@style/CardImageAction"
        android:layout_alignParentStart="true"
        android:id="@+id/deviceActionOne"
        android:contentDescription="@string/device_first_action"/>
    <ImageButton
        style="@style/CardImageAction"
        android:layout_toEndOf="@id/deviceActionOne"
        android:id="@+id/deviceActionTwo"
        android:contentDescription="@string/device_second_action"/>
    <ImageButton
        style="@style/CardImageAction"
        android:layout_toEndOf="@id/deviceActionTwo"
        android:id="@+id/deviceActionThree"
        android:contentDescription="@string/device_third_action"/>
    <ImageButton
        style="@style/CardImageAction"
        android:layout_alignParentEnd="true"
        android:id="@+id/deviceActionRight"/>

</RelativeLayout>