<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="16dp"
    android:paddingBottom="8dp"
    android:paddingStart="16dp"
    android:paddingEnd="16dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_gravity="center">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/misc_empty_string"
                android:gravity="center"
                android:id="@+id/bwDisplayCarbCorr"
                style="@style/TitleSecondaryDark"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/plugin_HAPPBolusWizard_carbBolus"
                android:gravity="center"
                style="@style/TitleSecondaryDark"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:layout_weight="1">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/misc_empty_string"
                style="@style/TitleSecondaryDark"
                android:gravity="center"
                android:id="@+id/bwDisplayBGCorr"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/plugin_HAPPBolusWizard_sgvCorrection"
                style="@style/TitleSecondaryDark"
                android:gravity="center"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:layout_weight="1">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/misc_empty_string"
                style="@style/TitleSecondaryDark"
                android:gravity="center"
                android:id="@+id/bwDisplayIOBCorr"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/plugin_HAPPBolusWizard_iobCorrection"
                android:gravity="center"
                style="@style/TitleSecondaryDark"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:baselineAligned="false">
        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5">
            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/plugin_HAPPBolusWizard_enter_carb"
                android:id="@+id/wizardCarbValue"
                android:inputType="number"
                style="@style/TitleSecondaryDark"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/plugin_HAPPBolusWizard_bolus"
                android:id="@+id/wizardSuggestedBolus"
                android:inputType="numberDecimal"
                style="@style/TitleSecondaryDark"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/plugin_HAPPBolusWizard_correction"
                android:id="@+id/wizardSuggestedCorrection"
                android:inputType="numberDecimal|numberSigned"
                style="@style/TitleSecondaryDark"/>
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/wizardCriticalLow"
        android:textColor="#FF5722"
        android:gravity="center"
        android:text="@string/plugin_HAPPBolusWizard_critical_low_no_bolus"
        android:visibility="gone"
        style="@style/TitleSecondaryDark"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/wizardShowCalc">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/information_outline"
                android:layout_gravity="center_vertical"
                style="@style/iconButton"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/plugin_HAPPBolusWizard_show_calc"
                android:gravity="center_vertical"
                android:paddingEnd="8dp"
                android:paddingStart="0dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="end"
            android:layout_weight="1">
            <Button
                android:layout_width="wrap_content"
                android:minWidth="88dp"
                android:layout_height="46dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:text="@android:string/ok"
                android:id="@+id/wizardAccept"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"/>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>