<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="16dp"
    android:paddingEnd="16dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:baselineAligned="false"
        android:id="@+id/bwTitles"
        android:paddingTop="18dp"
        android:paddingBottom="18dp">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/misc_empty_string"
                android:gravity="center"
                android:id="@+id/bwDisplayCarbCorr"
                style="@style/TitleSecondaryDark"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/plugin_HAPPBolusWizard_carbBolus"
                android:gravity="center"
                style="@style/TitleSecondaryDark"
                android:paddingTop="4dp"
                android:layout_below="@id/bwDisplayCarbCorr"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/misc_empty_string"
                style="@style/TitleSecondaryDark"
                android:gravity="center"
                android:id="@+id/bwDisplayBGCorr"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/plugin_HAPPBolusWizard_sgvCorrection"
                style="@style/TitleSecondaryDark"
                android:gravity="center"
                android:paddingTop="4dp"
                android:layout_below="@id/bwDisplayBGCorr"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/misc_empty_string"
                style="@style/TitleSecondaryDark"
                android:gravity="center"
                android:id="@+id/bwDisplayIOBCorr"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/plugin_HAPPBolusWizard_iobCorrection"
                android:gravity="center"
                style="@style/TitleSecondaryDark"
                android:paddingTop="4dp"
                android:layout_below="@id/bwDisplayIOBCorr"/>
        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="8dp"
        android:baselineAligned="false"
        android:layout_below="@id/bwTitles"
        android:id="@+id/bwEntry">
        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5">
            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/plugin_HAPPBolusWizard_enter_carb"
                android:id="@+id/wizardCarbValue"
                android:inputType="number"
                style="@style/TitleSecondaryDark"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/plugin_HAPPBolusWizard_bolus"
                android:id="@+id/wizardSuggestedBolus"
                android:inputType="numberDecimal"
                style="@style/TitleSecondaryDark"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/plugin_HAPPBolusWizard_correction"
                android:id="@+id/wizardSuggestedCorrection"
                android:inputType="numberDecimal|numberSigned"
                style="@style/TitleSecondaryDark"/>
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/wizardCriticalLow"
        android:textColor="#FF5722"
        android:gravity="center"
        android:text="@string/plugin_HAPPBolusWizard_critical_low_no_bolus"
        android:visibility="gone"
        style="@style/TitleSecondaryDark"
        android:layout_below="@id/bwEntry"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/wizardCriticalLow"
        android:paddingTop="18dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/wizardShowCalc"
            android:layout_centerVertical="true">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/information_outline"
                style="@style/iconButton"
                android:id="@+id/showCalcIcon"
                android:layout_centerVertical="true"
                android:layout_alignParentStart="true"
                android:layout_marginStart="18dp"
                android:contentDescription="@string/plugin_HAPPBolusWizard_show_calc"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plugin_HAPPBolusWizard_show_calc"
                android:layout_centerVertical="true"
                android:paddingStart="0dp"
                android:paddingEnd="18dp"
                android:id="@+id/showCalcLabel"
                android:layout_toEndOf="@id/showCalcIcon"/>
        </RelativeLayout>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@android:string/ok"
                android:id="@+id/wizardAccept"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_alignParentEnd="true"/>

    </RelativeLayout>
</RelativeLayout>